[tool.poetry]
name = "repl-nix-prompt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_prompt"}]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
